--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.0",
-        "flowframe/laravel-trend": "^0.4.0",
+        "flowframe/laravel-trend": "0.4",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
